in stock input to radio buttons

--- a/views/index.erb
+++ b/views/index.erb
@@ -18,7 +18,8 @@
   <input id='price' name='price' type='number' step="0.01">
 
   <label for='status'>Is it in stock?</label>
-  <input id='status' name='status' type='checkbox' value ="true" checked="checked">
+  <input id='status' name='status' type='radio' value ="true">Yes
+  <input id='status' name='status' type='radio' value ="false">No
 
   <button type="submit">Add product</button>
 </form>
