add table formating and edit link

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,11 +2,26 @@
 
 <p>Here are all your products:</p>
 
-<ul>
+<table class="table">
+  <tr>
+    <th>ID</th>
+    <th>Product</th>
+    <th>Price</th>
+    <th>In Stock</th>
+  </tr>
+
   <% @products.each do |product| %>
-  <li><%= product.name %></li>
+
+    <tr>
+      <td><%= product.id %></td>
+      <td><%= product.name %></td>
+      <td><%= product.price %></td>
+      <td><%= product.status %></td>
+      <td><a href="/products/<%= product.id() %>/edit">Update this product info</a></td>
+    </tr>
   <% end %>
-</ul>
+
+</table>
 
 <p>Add a new product:</p>
 
