--- a/views/index.erb
+++ b/views/index.erb
@@ -17,7 +17,7 @@
       <td><%= product.name %></td>
       <td><%= product.price %></td>
       <td><%= product.status %></td>
-      <td><a href="/products/<%= product.id() %>/edit">Update this product info</a></td>
+      <td><a href="/products/<%= product.id() %>/edit">Update</a></td>
     </tr>
   <% end %>
 
