--- a/views/product_edit.erb
+++ b/views/product_edit.erb
@@ -4,14 +4,26 @@
   <input name="_method" type="hidden" value="patch">
 
   <label for="name">Change Product Name</label>
-  <input id="name" name="name" type="text">
+  <input id="name" name="name" type="text" value="<%=@product.name() %>">
+
+  <br>
 
   <label for='price'>Change Price</label>
-  <input id='price' name='price' type='number' step="0.01">
+  <input id='price' name='price' type='number' step="0.01" value="<%=@product.price() %>">
+
+  <br>
 
   <label for='status'>Is it in stock?</label>
   <input id='status' name='status' type='radio' value ="true">Yes
   <input id='status' name='status' type='radio' value ="false">No
 
+  <br>
+
   <button type="submit">Update</button>
+
+  <br>
+
+  <input name="_method" type="hidden" value="delete">
+  <button type="submit">Delete Product</button>
+
 </form>
